# kb-forge

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SCHEMA.md  SECURITY.md  config.default.yaml  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
B-workbuddy-skill/: SKILL.md  requirements.txt
B-workbuddy-skill/references/: usage.md
B-workbuddy-skill/scripts/: run_pipeline.py
docs/: design.md  知识星球整理工具集_开源方案.md
expert/: expert.md  requirements.txt
expert/references/: usage.md
src/kbforge/: __init__.py  __main__.py  classify_config.py  cli.py  config.py  mcp_server.py
src/kbforge/adapters/: __init__.py  base.py  example_wechat.py  local_archive.py  mock.py  zsxq.py
src/kbforge/core/: __init__.py  archive_ingest.py  classify.py  clean.py  dedupe.py  diff.py  enrich.py  frontmatter.py  pipeline.py  site.py
src/kbforge/core/exporters/: __init__.py  base.py  extract.py  html.py  markdown.py  pptx.py
src/kbforge/core/query/: __init__.py  base.py  bm25.py  embedding.py  graph.py
src/kbforge/tools/: __init__.py  make_fixtures.py
tests/: conftest.py  test_build_index.py  test_classify.py  test_clean.py  test_cli.py  test_dedupe.py  test_diff.py  test_e2e_pipeline.py  test_enrich.py  test_exporters.py  test_ingest.py  test_local_archive.py  test_mcp.py  test_okf_compliance.py  test_query.py  test_site.py
tests/fixtures/sample_kb/: SCHEMA.md
tests/fixtures/sample_kb/archive/2026/07/: t101-rag-eval.md  t102-chunk-strategy.md
tests/fixtures/sample_kb/archive/2026/08/: t103-gpu-cost.md
(+6 files in other folders)
