[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-forge"
version = "0.1.0"
description = "Turn paid-community posts (e.g. Zsxq) into a structured, OKF-compatible knowledge base plus multi-format outputs (incl. PPT)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "kb-forge contributors" }]
keywords = ["knowledge-base", "rag", "obsidian", "okf", "zsxq", "wiki"]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "black>=24.0", "mypy>=1.8", "python-pptx>=0.6.23"]

[project.scripts]
kbforge = "kbforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end tests that need network access or real platform credentials (excluded from the Windows CI matrix)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
